# rare

./: .gitignore  NOTICE  README.md  build_doc.py  glasana_doc.py  helper.py  main.py  pyproject.toml
OmniDocBench-Dockerfile/: Dockerfile
configs/doclayout_yolo/: configDocSynth300K.json
configs/doclayout_yolo/json/: configD4LA.json  configDocLayNet.json  configDocStructBench.json
configs/docstrum/: configGlasana1.json  configGlasana2.json  configGlasana3.json  configOriginalPaper.json
configs/ppyolo/json/: configPubLayNet.json
configs/qwen/: config.json
configs/youtu/: config.json
extracted/html/: glasana.css
src/rare/: __init__.py  cli.py
src/rare/config/: paths.py
src/rare/doc/: renderers.py  schema.py
src/rare/evaluate/: _matching.py  datasets.py  omnidocbench.py  omnidocbench_docker.py  pdf_text.py  pipeline_eval.py  report.py  runner.py  vlm_eval.py
src/rare/models/: base.py  registry.py
src/rare/models/layout/: classical.py  detectron2_models.py  detr.py  dit.py  doclayout_yolo.py  effdet.py  layoutlmv3.py  nemotron.py  paddle_models.py  rfdetr.py  swindocseg.py  vgt.py
src/rare/models/order/: builtin.py  xycut.py
src/rare/models/order/xycut_enhanced/: layout_objects.py  support.py  utils.py  xycuts.py
src/rare/models/vlm/: _assembler.py  _vlm_schema.py  claude.py  deepseekocr.py  docling.py  dolphin.py  dotsocr.py  gemini.py  gemma.py  glmocr.py  gpt.py  marker.py  mineru.py  nemotron.py  paddleocr.py  prompts.py  qwen.py  youtu.py
src/rare/models/vlm/helpers/: normalize_pred.py
src/rare/parse/: assemble.py  clean.py  coco.py  figures.py  io.py  merge.py  pdf.py  pipeline.py  text.py
src/rare/tools/: _helper.py
src/rare/utils/: characterutils.py  conversionutils.py  displayutils.py  evalutils.py  fileutils.py
utils/: displayutils.py
