[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rare"
version = "0.1.0"
description = "Razčlenjevalnik Revij."
readme = "README.md"
# requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pycocotools",
    "matplotlib",
    "pydantic>=2",
    "pdfplumber",
    "pdf2image",
    "pillow",
    "opencv-python",
]

[project.optional-dependencies]
# Install with: pip install -e ".[claude]" or pip install -e ".[vlm-all]"
dit = ["timm==0.5.4", "Pillow", "blobfile", "mypy", "numpy", "pytest", "requests",
    "einops", "tensorboardX", "deepspeed==0.4.0", "scipy", "opencv-python", "shapely"]
doclayout-yolo = ["doclayout-yolo", "huggingface-hub", "torch", "torchmetrics"]
faster-rcnn = ["torch", "torchvision", "effdet"]
layoutlmv3 = ["datasets==1.15.1", "transformers==4.12.5", "seqeval==1.2.2", "deepspeed==0.5.7", "tensorboard==2.7.0",
    "seqeval==1.2.2", "sentencepiece", "timm==0.4.12", "Pillow", "einops", "textdistance", "shapely", "layoutlmft",
    "torchmetrics"]
mask-rcnn = ["torch", "torchvision", "effdet"]
pp-doclayoutv3 = ["paddleocr[all]"]
pp-doclayoutv3-torch = ["torchvision", "torchmetrics"]
rf-detr = ["rfdetr-doclayout", "requests", "torchmetrics"]

claude   = ["anthropic"]
gemini = ["google-genai"]
gpt = ["aiohttp"]
# MinerU is installed separately: pip install -U "mineru[core]"

[project.scripts]
rare = "rare.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rare*"]
exclude = [
    "layout-parser*",
    "annotation*",
    "data*",
    "dataset*",
    "datasets*",
    "dataset4ls*",
    "examples*",
    "extracted*",
    "results*",
    "outputs*",
    "scripts*",
    "segmentation*",
    "literature*",
    "configs*",
]
