[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rare"
version = "0.1.0"
description = "Razčlenjevalnik Revij."
readme = "README.md"
# requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pycocotools",
    "matplotlib",
    "pydantic>=2",
    "pdfplumber",
    "pdf2image",
    "pillow",
    "opencv-python",
    "tqdm"
]

[project.optional-dependencies]
# Install with: pip install -e ".[claude]" or pip install -e ".[vlm-all]"
dit = ["timm==0.5.4", "Pillow", "blobfile", "mypy", "numpy", "pytest", "requests",
    "einops", "tensorboardX", "deepspeed==0.4.0", "scipy", "opencv-python", "shapely"]
doclayout-yolo = ["doclayout-yolo", "huggingface-hub", "torch", "torchmetrics"]
faster-rcnn = ["torch", "torchvision", "effdet"]
layoutlmv3 = ["datasets==1.15.1", "transformers==4.12.5", "seqeval==1.2.2", "deepspeed==0.5.7", "tensorboard==2.7.0",
    "seqeval==1.2.2", "sentencepiece", "timm==0.4.12", "Pillow", "einops", "textdistance", "shapely", "layoutlmft",
    "torchmetrics"]
mask-rcnn = ["torch", "torchvision", "effdet"]
pp-doclayoutv3 = ["paddleocr[all]"]
pp-doclayoutv3-torch = ["torchvision", "torchmetrics"]
rf-detr = ["rfdetr-doclayout", "requests", "torchmetrics"]
detr = ["transformers", "torch", "timm", "torchmetrics"]
vgt = ["timm==0.5.4", "Pillow==8.4.0", "blobfile", "mypy", "numpy", "pytest",
    "requests", "einops", "tensorboard", "scipy", "opencv-python==4.5.1.48", "Shapely==1.8.4", "transformers"]

marker = ["marker-pdf", "pdfplumber<0.11.10", "pillow>=10.2.0,<11.0.0", "pypdfium2==4.30.0"]
nemotron = ["albumentations", "timm", "open_clip_torch", "accelerate==1.12.0", "albumentations==2.0.8",
    "transformers==5.6.1", "timm==1.0.22", "beautifulsoup4"]

claude   = ["anthropic", "aiohttp"]
gemini = ["google-genai", "aiohttp"]
gpt = ["aiohttp"]
# MinerU is installed separately: pip install -U "mineru[core]"

[project.scripts]
rare = "rare.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rare*"]
exclude = [
    "layout-parser*",
    "annotation*",
    "data*",
    "dataset*",
    "datasets*",
    "dataset4ls*",
    "examples*",
    "extracted*",
    "results*",
    "outputs*",
    "scripts*",
    "segmentation*",
    "literature*",
    "configs*",
]
